--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 #r{
-    background:gray;
+    background: red;
 }
 #p{
     background: skyblue;
 }
 #s{
-    background: red;
+    background:yellow;
 }
